# Actividades-guia-RO2-Part3_-Casallas-V._Reina-M._Santos-D.

./: README.md  main.launch.py  subs_events.launch.py
dif_bot_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
dif_bot_description/activity5/launch/: display.launch.py
dif_bot_description/activity5/rviz/: dif_bot.rviz
dif_bot_description/activity5/urdf/: dif_bot_description.urdf  dif_bot_description.urdf.xacro
launch/: display.launch.py  gz_sim.launch.py  mini_proyecto.launch.py
urdf/: dif_bot_description.urdf  dif_bot_description.urdf.xacro  robot.urdf.xacro
